// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expenses summary multiple  expenses 1`] = `
<div>
  <h1>
    Viewing 
    34
     
    expenses
     totaling 
    $23,564,894,654.42
  </h1>
</div>
`;

exports[`Should correctly render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
